# Adventure

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/skills/adv-build/: SKILL.md
.claude/skills/adv-docs/: SKILL.md
.claude/skills/adv-feature/: SKILL.md
.claude/skills/adv-format/: SKILL.md
.claude/skills/adv-input-action/: SKILL.md
.claude/skills/adv-map/: SKILL.md
.claude/skills/adv-new-module/: SKILL.md
.claude/skills/adv-onboard/: SKILL.md
.claude/skills/adv-sprite/: SKILL.md
.claude/skills/adv-test/: SKILL.md
.github/workflows/: ci.yml
bench/: Bench.h  CLAUDE.md  bench_lua.cpp  bench_main.cpp  bench_metrics.cpp  bench_world.cpp
cmake/: deps.cmake
docs/: ASSET_PIPELINE.md
docs/design/: ARCHITECTURE.md  BACKLOG.md  COMBAT.md  CONVENTIONS.md  DEVELOPMENT_LOOP.md  PERFORMANCE.md  ROADMAP.md  VISION.md
maps/: box.map  room.map  training.map
scripts/: items.lua  skills.lua  spells.lua  tuning.lua
scripts/weapons/: crossbow.lua  dagger.lua  mace.lua  sword.lua
src/: main.cpp
src/combat/: CLAUDE.md  CombatSystem.cpp  CombatSystem.h  Destructible.cpp  Destructible.h  Enemy.h  Loadout.cpp  Loadout.h  Melee.cpp  Melee.h  Projectile.cpp  Projectile.h  Rage.cpp  Rage.h  Spell.cpp  Spell.h
src/core/: CLAUDE.md  Config.h  Metrics.cpp  Metrics.h  Platform.cpp  Platform.h  ProfileReport.cpp  ProfileReport.h
src/input/: CLAUDE.md  InputMap.cpp  InputMap.h  InputQuery.cpp  InputQuery.h
src/items/: CLAUDE.md  Collide.cpp  Collide.h  Container.cpp  Container.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Pickup.cpp  Pickup.h
src/lua/: Bindings.cpp  CLAUDE.md  ScriptEngine.cpp  ScriptEngine.h  ScriptEngineImpl.h
src/mech/: CLAUDE.md  Mechanisms.cpp  Mechanisms.h
src/player/: CLAUDE.md  JumpMeter.cpp  JumpMeter.h  MoveTuning.h  Player.h  PlayerController.cpp  PlayerController.h
src/render/: Billboard.cpp  Billboard.h  CLAUDE.md  Mech.cpp  Mech.h  MetricsOverlay.cpp  MetricsOverlay.h  Prop.cpp  Prop.h  Renderer.cpp  Renderer.h  Shaders.h  Viewmodel.cpp  Viewmodel.h  WorldRenderer.cpp  WorldRenderer.h
src/rpg/: CLAUDE.md  SkillTree.cpp  SkillTree.h
src/world/: BrushGeometry.cpp  BrushGeometry.h  CLAUDE.md  CollisionWorld.cpp  CollisionWorld.h  MapParser.cpp  MapParser.h  MapTypes.h
tests/: CLAUDE.md  map_helpers.h  test_billboard.cpp  test_brushgeometry.cpp  test_collide.cpp  test_collisionworld.cpp  test_combat.cpp  test_container.cpp  test_destructible.cpp  test_geometry_golden.cpp  test_hazard.cpp  test_inputmap.cpp  test_inventory.cpp  test_jumpmeter.cpp  test_loadout.cpp  test_main.cpp  test_mapparser.cpp  test_mechanisms.cpp  test_melee.cpp  test_metrics.cpp  test_pickup.cpp  test_playercontroller.cpp  test_profilereport.cpp  test_projectile.cpp  test_rage.cpp  test_sandbox.cpp  test_scriptengine.cpp  test_skilltree.cpp  test_spell.cpp
tools/: gen_room.py  gen_training.py
